changed japanese message resource

--- a/QKSMS/src/main/res/values-ja/strings.xml
+++ b/QKSMS/src/main/res/values-ja/strings.xml
@@ -151,8 +151,8 @@
   <string name="pref_sent_timestamps_summary">メッセージが送信された時のタイムスタンプを表示します</string>
   <string name="pref_force_timestamps">タイムスタンプの強制</string>
   <string name="pref_force_timestamps_summary">すべてのメッセージにタイムスタンプを表示します</string>
-  <string name="pref_key_timestamp_delay">新しいタイムスタンプの遅延</string>
-  <string name="pref_key_timestamp_delay_summary">新しいタイムスタンプを表示するまでに 2 つのメッセージ間で経過する必要がある時間 (分) を指定します</string>
+  <string name="pref_key_timestamp_delay">新しいタイムスタンプの遅延 (分)</string>
+  <string name="pref_key_timestamp_delay_summary">新しいタイムスタンプを表示するまでに 2 つのメッセージ間で経過する必要がある時間を指定します</string>
   <string name="pref_compose_favorites">スターを付けた連絡先</string>
   <string name="pref_compose_summary_favorites">QK 作成ウィンドウにスターを付けた連絡先を表示します。タップすると消えます</string>
   <string name="pref_prox_sensor_call">近接センサー</string>
@@ -162,7 +162,7 @@
   <string name="pref_delivery_toast">配信完了を表示</string>
   <string name="pref_delivery_toast_summary">メッセージが配信されたことを画面に表示します</string>
   <string name="pref_delivery_vibrate">バイブレーション</string>
-  <string name="pref_delivery_vibrate_summary">メッセージ配信時に振動します</string>
+  <string name="pref_delivery_vibrate_summary">メッセージ配信時に振動して知らせます</string>
   <string name="pref_delete_old_messages">古いメッセージの削除</string>
   <string name="pref_delete_old_messages_summary">古くなったメッセージを自動的に削除します</string>
   <string name="pref_delete_old_messages_unread">未読メッセージ</string>
@@ -184,7 +184,7 @@
   <string name="pref_enter_button">Enter ボタン</string>
   <string name="pref_enter_button_summary">キーボードの Enter ボタンの動作を変更します</string>
   <string name="pref_compose_group">グループメッセージ送信</string>
-  <string name="pref_compose_group_summary">複数の人にメッセージを作成するとき、個々へのメッセージ (SMS) ではなく、グループメッセージ (MMS) を送信します</string>
+  <string name="pref_compose_group_summary">複数の人にメッセージを作成するとき、個々へのメッセージ (SMS) ではなく、グループメッセージ (MMS) で送信します</string>
   <string name="pref_auto_download">自動ダウンロード MMS</string>
   <string name="pref_auto_download_summary">使用可能になったとき、自動的に MMS メッセージをダウンロードします</string>
   <string name="pref_auto_data">自動でのデータアクセス有効化</string>
@@ -202,27 +202,27 @@
   <string name="pref_return">Return ボタンを表示</string>
   <string name="pref_return_summary">絵文字ボタンの代わりにキーボードの return キーを表示します</string>
   <string name="pref_text">テキスト</string>
-  <string name="pref_notifications">SMS 通知を有効にする</string>
-  <string name="pref_led">LED での通知</string>
-  <string name="pref_theme_led">通知時の LED 色</string>
+  <string name="pref_notifications">SMS 通知の有効化</string>
+  <string name="pref_led">LED 通知</string>
+  <string name="pref_theme_led">通知 LED 色</string>
   <string name="pref_wake">ウェイクアップ設定</string>
   <string name="pref_wake_summary">新しいメッセージを受信したときにスリープを解除し、スクリーンを点灯します</string>
   <string name="pref_notifications_private">プライベート通知</string>
-  <string name="pref_notifications_private_summary">非表示にする通知を変更します</string>
+  <string name="pref_notifications_private_summary">非表示にする通知の種類を指定します</string>
   <string name="pref_ringtone">通知音</string>
   <string name="pref_ringtone_summary">通知音を選択します</string>
   <string name="pref_ticker">通知の表示</string>
   <string name="pref_ticker_summary">新しいメッセージを通知領域に簡易表示します</string>
   <string name="pref_vibration">バイブレーション</string>
-  <string name="pref_vibration_summary">新しいメッセージを受信したときに振動します</string>
+  <string name="pref_vibration_summary">新しいメッセージを受信したときに振動して知らせます</string>
   <string name="pref_notification_call">通話ボタン</string>
-  <string name="pref_notification_call_summary">通知からメッセージの送信者に電話します</string>
+  <string name="pref_notification_call_summary">通知からメッセージの送信者にすぐに電話できます</string>
   <string name="pref_dimiss_read">既読としてマーク</string>
   <string name="pref_dismiss_read_summary">通知をクリアしたとき、メッセージを既読にします</string>
   <string name="pref_delayed">メッセージ遅延送信</string>
   <string name="pref_delayed_summary">メッセージ送信前に一定時間待機します。待機中は送信をキャンセルできます</string>
   <string name="pref_delayed_duration">待機時間 (秒)</string>
-  <string name="pref_delayed_duration_summary">メッセージ送信前の待機時間 (秒) を設定します</string>
+  <string name="pref_delayed_duration_summary">メッセージ送信前の待機時間を設定します</string>
   <string name="pref_night_auto">自動夜間モード</string>
   <string name="pref_night_auto_summary">時刻による自動夜間モードを有効にします</string>
   <string name="pref_day_start">昼間の開始時刻</string>
@@ -665,7 +665,7 @@
   <string name="mms_setup_success_body">再度自動設定、サポートに連絡、または独自の構成を入力する場合、問題が発生した場合、設定の MMS セクションをご覧ください。</string>
   <string name="na">N/A</string>
   <string name="no">いいえ</string>
-  <string name="pref_automatically_configure_mms">自動的に MMS を設定</string>
+  <string name="pref_automatically_configure_mms">MMS を自動的に設定</string>
   <string name="pref_mms_contact_support">サポートに問い合わせ</string>
   <string name="pref_category_sending_mms">MMS 送信</string>
   <string name="pref_category_mms_configuration">MMS 設定</string>
